FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR})

BEGIN_WRAPPER_LIBRARY("${PROJECT_NAME}")
SET(WRAPPER_LIBRARY_DEPENDS Base Resize)
SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKAlgorithms)

# TODO: drop me once itkFFTWLock
# is is ITKAlgorithms
SET(WRAPPER_LIBRARY_CXX_SOURCES
"${PROJECT_SOURCE_DIR}/itkFFTWLock.cxx")

SET(WRAPPER_LIBRARY_GROUPS
  itkFFTConvolutionPadImageFilter
  itkFFTConvolutionImageFilterBase
)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

