FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR})

BEGIN_WRAPPER_LIBRARY("${PROJECT_NAME}")
SET(WRAPPER_LIBRARY_DEPENDS Base)

# TODO: drop me once itkThreadSafeMersenneTwisterRandomVariateGenerator.cxx
# is is ITKCommom
SET(WRAPPER_LIBRARY_CXX_SOURCES "${PROJECT_SOURCE_DIR}/itkThreadSafeMersenneTwisterRandomVariateGenerator.cxx")

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

